--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "geoip-country": "^4.2.117",
     "geoip-lite": "^1.4.10"
   }
 }
